--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- happy client section -->
         <section class="container my-5 py-md-5">
             <h2 class="text-center fw-bold  my-5"><span class="d-block d-md-inline">Happy</span> <span
-                    class="color-pinky-type  d-block d-md-inline">Clients says</span>
+                    class="color-pinky-type  d-block d-md-inline">Clients Says</span>
             </h2>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
@@ -414,6 +414,56 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- carousel -->
+        <section class="container">
+            <h2 class="text-center fw-bold  my-5"><span class="d-block d-md-inline">Explore </span> <span
+                    class="color-pinky-type  d-block d-md-inline">Cruise Bikes</span>
+            </h2>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="images/bike-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block text-white fs-3">
+                            <h5>Bike 1</h5>
+                            <p>This is number one Cruise-bike ranked last year.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="images/bike-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block text-white fs-3">
+                            <h5>Bike 2</h5>
+                            <p>This is second Cruise-bike ranked last year.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/bike-3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block text-white fs-3">
+                            <h5>Bike 3</h5>
+                            <p>This is third Cruise-bike ranked last year.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
     </main>
